--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
+    "react": "18.2.0",
     "react-dom": "^19.2.3",
-    "lucide-react": "^0.562.0",
-    "recharts": "^3.6.0"
+    "lucide-react": "0.263.1",
+    "recharts": "2.12.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
